Validation of codelist is now more compartmentalized. Updated and cleaned up the test code in both component and integration test. Removed "Testdata"-class and starts to initialize test-values in each test to try to make it easier to read and identify errors.